# -amplifier-module-hooks-telegram-bridge

./: .gitignore  README.md  example_mount_plan.yaml  pyproject.toml
amplifier_module_hooks_telegram_bridge/: __init__.py  auth_manager.py  hook.py  message_formatter.py  telegram_client.py
tests/: __init__.py  test_hook.py
